# coding-agent-example

./: Cargo.toml  README.md
docs/: ch1_cli.md  codex.md
docs/ch1/: implementation_guide.md
docs/ch2/: ch2_tool_use.md  implementation_guide.md
docs/ch3/: ch3_filesystem_tools.md  implementation_guide.md
docs/ch4/: ch4_editfile.md  implementation_guide.md
docs/ch5/: ch5_system_prompt.md  implementation_guide.md
src/: anthropic.rs  config.rs  main.rs  system_prompt.rs
src/tools/: edit_file.rs  list_files.rs  mod.rs  read_file.rs  search_in_directory.rs  write_file.rs
